# BlockChain

./: block.py  blockchain.py  main.py  pyproject.toml  utils.py  web.py
core/: block.py  blockchain.py  chain.py  transaction.py  user.py  wallet.py
servers/: log.py
servers/p2p/: p2p_server.py
servers/web/: error.py  http_server.py  response.py
utils/: exceptions.py
web/: error.py  http_server.py  request.py
